--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,5 @@
 * {
-	border-style: border-box;
-	background-color: #d3d3d3;
+	box-sizing: border-box;
 }
 
 body > div {
@@ -16,16 +15,36 @@ body > div {
 	padding-left: 10px;
 	padding-right: 10px;
 	width: 500px;
-	height: 350px;
+	height: 250px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 50px;
+	margin-top: 20px;
 	margin-bottom: 50px;
 	border: 2px solid black;
 }
 
+#game-list-div {
+	text-align: left;
+	padding-left: 10px;
+	padding-right: 10px;
+	width: 500px;
+	height: 250px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 20px;
+	margin-bottom: 50px;
+	border: 2px solid black;
+}
+
+#game-list {
+	list-style: none;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+}
+
 .hidden {
-    visibility: hidden;
+	display: none;
 }
 
 .centered {
